author/css/canvasser.css
/* ... */
.actionspacer{
  margin-top: 15px;
}

.activity{
  float:left;
  border: 2px rgb(100,100,100) solid;
}

#alert_box{
  background-color: var(--alert-bg-color);
  border-radius: 10px;
  border: 5px solid red;
  bottom: 0;
  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  color: var(--alert-color);
  font-family: button;
  height: 200px;
  left: 0;
  margin: auto;
  position: absolute;
  right: 0;
  top: 0;
  width: 600px;
  z-index: 9999;
}

.alert_content{
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translateX(-50%);
}

.alert_title{
  font-size: 2em;
  text-align: center;
}

.authoractivity{
  box-shadow: 0px 2px 5px 0px rgba(50, 50, 50, 0.25);
  margin-bottom: 5px;
}

.auth_rate{
  width:50px;
  background:rgb(191, 212, 211);
}

.auth_text{
  background-color: rgb(199, 199, 199);
  font-size: .8em;
  font-family: button;
  display: table-cell;
  width:150px;
  margin-left: 0px;
  margin-top: 3px;
  margin-bottom: 3px;
  padding: 4px;
  border: 0px;
  border-top: 1px rgb(212, 218, 226) solid;
  border-bottom: 1px rgb(212, 218, 226) solid;
}

.auth_xy{
  display: table-cell;
  width: 50px;
  background-color: rgb(199, 199, 199);
  margin-left: 2px;
  margin-top: 3px;
  margin-bottom: 3px;
  padding: 4px;
  border: 0px;
  border-top: 1px rgb(191, 212, 211) solid;
  border-bottom: 1px rgb(191, 212, 211) solid;
  font-family: button;
  font-size: .8em;
}

.bottomlinks{
  margin-left:auto;
  margin-right:auto;
}

.bottomlinks td{
  padding-left: 20px;
  padding-right: 20px;
}

.button_load{
  background-color: rgb(240,240,240);
  border: 2px black solid;
  color: black;
  cursor: pointer;
  display: inline-block;
  float: right;
  margin-right: 20px;
  padding: 1px 10px;
  user-select: none;
}

.button_righter{
  margin-top: 2px;
  margin-right: 5px;
  float: right;
  cursor: pointer;
}

.c_entrylabel_pos{
  background-color: rgb(111, 111, 111);
  border: 1px rgb(191, 212, 211) solid;
  color: rgb(220, 220, 220);
  font-size: .8em;
  user-select: none;
}

.c_entrytitle_pos{
  background-color:  rgb(191, 212, 211) ;
  border: 1px rgb(191, 212, 211) solid;
}

.c_entrytitle_text{
  background-color: rgb(111, 111, 111);
  color: rgb(220, 220, 220);
  font-size: .8em;
  border: 1px rgb(191, 212, 211) solid;
}

#canvasser_authoring{
  background-color: rgb(220,220,220);
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
}

.checkbox{
  width: 26px;
  height: 26px;
  vertical-align: middle;
}

.clicktr{
  cursor: pointer;
  font-family: selecttext;
  font-size: 1.6em;
  padding: 0px;
  user-select: none;
}

.clicktr td{
  padding: 0px;
}

.content_load{
  background-color: white;
  height: 390px;
  min-width: 250px;
  margin-bottom: 5px;
  overflow-y: scroll;
  padding: 10px;
}

.content_load_all{
  background-color: white;
  height: 205px;
  margin-bottom: 5px;
  min-width: 397px;
  overflow-y: scroll;
  padding: 10px;
  resize: both;
  user-select: none;
}

.contentspace{
  margin: 5px 20px;
}

#delete_box{
  background-color: var(--notice-bg-color);
  border-radius: 10px;
  border: 5px solid rgb(109, 109, 109);
  bottom: 0;
  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  color: var(--notice-color);
  font-family: button;
  height: 400px;
  left: 0;
  margin: auto;
  position: absolute;
  right: 0;
  top: 0;
  width: 800px;
  z-index: 9999;
}

.deleter{
  margin-bottom: 10px;
  cursor: pointer;
}

.divbutton{
  background-color: white;
  border-radius: 3px;
  border: 1px black solid;
  box-shadow: 0px 2px 5px 0px rgba(50, 50, 50, 0.25);
  cursor: pointer;
  display: inline-block;
  font-family: button;
  margin: 2px;
  padding: 4px;
  user-select: none;
}

.divspace{
  padding-bottom: 25px;
}

.drop_items{
  margin-top: 4px;
}

.entrylabel{
  display: inline-block;
  font-family:button;
  margin-bottom: 3px;
  margin-left: 3px;
  margin-right: 0px;
  margin-top: 3px;
  padding: 4px;
  user-select: none;
}

.entrytitle{
  display: table-cell;
  padding: 4px;
  margin-top: 3px;
  margin-bottom: 3px;
  margin-left: 3px;
  margin-right: 0px;
  font-family:button;
}

.filterholder {
  width: 100%;
  text-align: center;
}

@font-face {
  font-family: title;
  src: url(../font/CharriotDeluxe.woff);
}

@font-face {
  font-family: button;
  src: url(../font/CharriotDeluxe.woff);
}

@font-face {
  font-family: selecttext;
  src: url(../font/alterebro-pixel-font.woff);
}

.font-larger{
  font-size:larger;
}

.font-medium{
  font-size: medium;
}

.grouper{
  background-color: rgb(150, 150, 150);
  padding-bottom: 10px;
  user-select: none;
}

.grouptitle{
  color: #f0efff;
  font-family: button;
  text-align: center;
}

.header{
  background-color: var(--header-bg-color);
  color: var(--header-color);
  display: block;
  height: 51px;
}

#imageholder{
  min-height: 20px;
  min-width: 160px;
  width: 150px;
  background-image: url("../sample/image/checker.png");
  border: 2px rgb(165, 165, 165) solid;
  border-radius: 4px;
  overflow-y: scroll;
  margin-left: auto;
  margin-right: auto;
  margin-top: 5px;
  margin-bottom: 5px;
  resize: both;
}

#imageholder img {
  width:100%;
  max-height: 100px;
}

.imageid{
  vertical-align:middle;
  font-size: 15px;
}

.imagetext{
  font-family: selecttext;
  font-size: 1.6em;
  padding-top: 5px;
  padding-bottom: 5px;
  color: rgb(146, 146, 146);
}

.layerexp{
  vertical-align:top;
  display: inline-block;
}

#layerholder{
  border: 2px rgb(165, 165, 165) solid;
  border-radius: 4px;
  overflow-y: scroll;
  margin-left: auto;
  margin-right: auto;
  margin-top: 5px;
  margin-bottom: 5px;
  background-color: white;
  min-height: 20px;
  resize: vertical;
}

.layer_icons{
  vertical-align:top;
  margin-right: 5px;
}

.layername{
  padding: 0px;
}

.layershow{
  vertical-align:top;
  float:right;
}

.layers_t{
  vertical-align: top;
  display: inline-block;
  margin-top: 7px;
}
/* ... */

